[gd_scene load_steps=3 format=3 uid="uid://ppprvjdbnopt"]

[ext_resource type="Script" path="res://game_scripts/main_game.gd" id="1_2lkk0"]
[ext_resource type="FontFile" uid="uid://cslrf3qfio6w7" path="res://assets/Merathus.ttf" id="3_k0cve"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2lkk0")
metadata/_edit_lock_ = true

[node name="FG_rect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.796243, 0.796243, 0.796243, 1)
metadata/_edit_lock_ = true

[node name="BG_rect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 548.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.172549, 0.686275, 0.627451, 1)
metadata/_edit_lock_ = true

[node name="music_button" type="Button" parent="BG_rect"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 51.0
offset_top = 531.0
offset_right = 311.0
offset_bottom = 601.0
focus_mode = 0
flat = true
metadata/_edit_lock_ = true

[node name="music_label" type="Label" parent="BG_rect/music_button"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_top = -0.326531
anchor_right = 1.0
anchor_bottom = 1.32653
offset_top = 16.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("3_k0cve")
theme_override_font_sizes/font_size = 50
text = "Music: off"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
justification_flags = 2
uppercase = true
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="labels" type="Node" parent="."]

[node name="title_label" type="Label" parent="labels"]
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -900.0
offset_right = -521.0
offset_bottom = -321.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 6
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("3_k0cve")
theme_override_font_sizes/font_size = 170
text = "x"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
uppercase = true
metadata/_edit_lock_ = true

[node name="title_label1" type="Label" parent="labels"]
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -673.0
offset_right = -352.0
offset_bottom = -309.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 6
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("3_k0cve")
theme_override_font_sizes/font_size = 170
text = "x"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
uppercase = true
metadata/_edit_lock_ = true

[node name="title_label2" type="Label" parent="labels"]
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -702.0
offset_right = -515.0
offset_bottom = -318.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(0, 1, 0.533333, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 6
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("3_k0cve")
theme_override_font_sizes/font_size = 170
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
uppercase = true
metadata/_edit_lock_ = true

[node name="subtitle_label" type="Label" parent="labels"]
anchors_preset = -1
anchor_left = -0.00111111
anchor_top = 0.376667
anchor_right = 0.607778
anchor_bottom = 0.565
offset_left = 0.999999
offset_top = -32.0002
offset_right = 1.0
offset_bottom = -32.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(0, 1, 0.533333, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("3_k0cve")
theme_override_font_sizes/font_size = 70
text = "A tic-tac-toe"
horizontal_alignment = 1
autowrap_mode = 3
uppercase = true
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="subtitle_label2" type="Label" parent="labels"]
anchors_preset = -1
anchor_top = 0.505
anchor_right = 0.607778
anchor_bottom = 0.693333
offset_top = -32.0
offset_bottom = -31.9998
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(0, 1, 0.533333, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("3_k0cve")
theme_override_font_sizes/font_size = 70
text = "game"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
uppercase = true
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="subtitle_label3" type="Label" parent="labels"]
anchors_preset = -1
anchor_top = 0.728333
anchor_right = 0.608889
anchor_bottom = 0.888333
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("3_k0cve")
theme_override_font_sizes/font_size = 50
text = "A game by: "
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
uppercase = true
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="subtitle_label4" type="Label" parent="labels"]
anchors_preset = -1
anchor_top = 0.84
anchor_right = 0.583333
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(0, 1, 0.533333, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("3_k0cve")
theme_override_font_sizes/font_size = 60
text = "da'al"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
uppercase = true
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="menu_label" type="Label" parent="labels"]
anchors_preset = -1
anchor_left = 0.608889
anchor_right = 1.0
anchor_bottom = 0.263333
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("3_k0cve")
theme_override_font_sizes/font_size = 66
text = "game menu"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
uppercase = true
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="playGameButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 548.0
offset_top = 198.0
offset_bottom = -295.0
grow_horizontal = 2
grow_vertical = 2
action_mode = 0
flat = true
metadata/_edit_lock_ = true

[node name="playGameLabel" type="Label" parent="playGameButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("3_k0cve")
theme_override_font_sizes/font_size = 50
text = "> Play game <"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
justification_flags = 2
uppercase = true
metadata/_edit_lock_ = true

[node name="CreditsButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 548.0
offset_top = 315.0
offset_bottom = -218.0
grow_horizontal = 2
grow_vertical = 2
flat = true
metadata/_edit_lock_ = true

[node name="CreditsLabel" type="Label" parent="CreditsButton"]
layout_mode = 1
anchors_preset = -1
anchor_top = -0.326531
anchor_right = 1.0
anchor_bottom = 1.32653
offset_top = 16.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("3_k0cve")
theme_override_font_sizes/font_size = 50
text = "> Credits <"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
justification_flags = 2
uppercase = true
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[connection signal="pressed" from="BG_rect/music_button" to="." method="_on_music_button_pressed"]
[connection signal="pressed" from="playGameButton" to="." method="_on_play_game_button_pressed"]
[connection signal="pressed" from="CreditsButton" to="." method="_on_credits_button_pressed"]
